3.0.2: restore element that was recently removed: restorePreProtonArrowpanels.uc.js, a new script that restores the arrows attached to panels. they have finally been removed at the markup level, where in the past they were merely temporarily hidden. so now if you want panels to have arrows, like my theme is intended for, you will need this script. the script does not require my theme though. it's a complete package. (CSS) some various fixes for the latest nightly update; major update to the wikipedia dark mode theme.

--- a/uc-globals.css
+++ b/uc-globals.css
@@ -35,6 +35,7 @@ tooltip {
     --uc-content-text-a50: hsla(236, 100%, 85%, 0.5);
     --uc-content-text-a80: rgba(255, 255, 255, 0.8);
     --uc-accent-color: hsl(233, 61%, 8%);
+    --uc-frame-color: var(--uc-accent-color);
     --uc-toolbar-bgcolor: hsl(233, 42%, 15%);
     --uc-toolbar-color: var(--ui-text-100);
     --uc-arrowpanel-background: hsl(233, 36%, 11%);
