--- a/userChrome.au.css
+++ b/userChrome.au.css
@@ -79,6 +79,60 @@ panel popupset panel[type="autocomplete-richlistbox"] {
     margin-top: 4px;
 }
 
+panel[type="arrow"][side="top"],
+panel[type="arrow"][side="bottom"] {
+    margin-inline: -20px;
+}
+
+panel[type="arrow"][side="left"],
+panel[type="arrow"][side="right"] {
+    margin-block: -20px;
+}
+
+:is(panel, menupopup)::part(arrow) {
+    -moz-context-properties: fill, stroke;
+    fill: var(--arrowpanel-background);
+    stroke: var(--arrowpanel-border-color);
+}
+
+:is(panel, menupopup)[side="top"]::part(arrow),
+:is(panel, menupopup)[side="bottom"]::part(arrow) {
+    list-style-image: url("chrome://userchrome/content/panelarrow-vertical.svg");
+    position: relative;
+    margin-inline: 10px;
+}
+
+:is(panel, menupopup)[side="top"]::part(arrow) {
+    margin-bottom: -5px;
+}
+
+:is(panel, menupopup)[side="bottom"]::part(arrow) {
+    transform: scaleY(-1);
+    margin-top: -5px;
+}
+
+:is(panel, menupopup)[side="left"]::part(arrow),
+:is(panel, menupopup)[side="right"]::part(arrow) {
+    list-style-image: url("chrome://userchrome/content/panelarrow-horizontal.svg");
+    position: relative;
+    margin-block: 10px;
+}
+
+:is(panel, menupopup)[side="left"]::part(arrow) {
+    margin-right: -5px;
+}
+
+:is(panel, menupopup)[side="right"]::part(arrow) {
+    transform: scaleX(-1);
+    margin-left: -5px;
+}
+
+#confirmation-hint[hidearrow]::part(arrowbox) {
+    /* Don't display the arrow but keep the popup at the same vertical
+    offset as other arrow panels. */
+    visibility: hidden;
+}
+
 #identity-popup-multiView {
     padding: var(--menupopup-inner-padding);
     padding-top: 0;
@@ -204,7 +258,7 @@ menupopup::part(arrowscrollbox),
 }
 
 :is(.tab-throbber, .tab-icon-pending, .tab-icon-image, .tab-sharing-icon-overlay, .tab-icon-overlay):not([pinned]) {
-	margin-inline-end: 6px;
+    margin-inline-end: 6px;
 }
 
 /* panel icon margin */
@@ -217,7 +271,7 @@ menupopup::part(arrowscrollbox),
 .subviewbutton[targetURI] > .toolbarbutton-text,
 .subviewbutton.bookmark-item > .toolbarbutton-text,
 .subviewbutton[checked="true"] > .toolbarbutton-text {
-	padding-inline-start: var(--arrowpanel-subviewbutton-iconic-gap, 8px);
+    padding-inline-start: var(--arrowpanel-subviewbutton-iconic-gap, 8px);
 }
 
 /* hide tab bar's arrow buttons and spacers */
